feat(tmux): add tpm and status bar theme

--- a/src/tag-tmux/config/tmux/tmux.conf
+++ b/src/tag-tmux/config/tmux/tmux.conf
@@ -1,3 +1,12 @@
 set-option -g default-shell /bin/zsh
+set -g default-terminal 'tmux-256color'
+set -ag terminal-overrides ',xterm-256color:RGB'
 
-bind-key -r f run-shell "tmux neww tmux-sessionizer"
+bind-key -r f run-shell 'tmux neww tmux-sessionizer'
+
+set -g @plugin 'tmux-plugins/tpm'
+
+set -g @plugin 'wfxr/tmux-power'
+set -g @tmux_power_theme 'default'
+
+run '~/.tmux/plugins/tpm/tpm'
