--- a/src/tag-tmux/config/tmux/tmux.conf
+++ b/src/tag-tmux/config/tmux/tmux.conf
@@ -9,4 +9,8 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'wfxr/tmux-power'
 set -g @tmux_power_theme 'default'
 
+# neovim error
+set -sg escape-time 10
+set -g focus-events on
+
 run '~/.tmux/plugins/tpm/tpm'
