feat(tmux): Install tpm on XDG_HOME

--- a/src/tag-tmux/config/tmux/tmux.conf
+++ b/src/tag-tmux/config/tmux/tmux.conf
@@ -13,4 +13,4 @@ set -g @tmux_power_theme 'default'
 set -sg escape-time 10
 set -g focus-events on
 
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
