--- a/src/tag-alacritty/config/alacritty/alacritty.toml
+++ b/src/tag-alacritty/config/alacritty/alacritty.toml
@@ -7,7 +7,7 @@ TERM = "xterm-256color"
 
 live_config_reload = "true"
 
-[shell]
+[terminal.shell]
 program = "/usr/bin/tmux"
 args = ["new-session", "-A", "-s", "default"]
 
