feat(zk): Enable fzf-preview with bat

--- a/src/tag-zk/config/zk/config.toml
+++ b/src/tag-zk/config/zk/config.toml
@@ -118,7 +118,7 @@ multiword-tags = false
 
 # bat is a great tool to render Markdown document with syntax highlighting.
 #https://github.com/sharkdp/bat
-#fzf-preview = "bat -p --color always {-1}"
+fzf-preview = "bat -p --color always {-1}"
 
 
 # LSP
